2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_kfreebsd.in: Allow ufs.ko to be missing as it's
	per default compiled in kernel and prior to 8.0 isn't shipped at all.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): If
	real_sb->size is zero (e.g. RAID-0), get the disk size from
	real_sb->data_size instead.
	Fixes Ubuntu bug #743136.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/misc.c (grub_normal_print_device_info): Use correct
	printf clauses for printing size and start.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext2_read_inode): Fix an overflow.
	Reported and tested by: Timothy Nikkel.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/gfxterm.c (dirty_region_add): Move core part to ...
	(dirty_region_add_real): ... this.
	(dirty_region_add): Don't discard margin refresh when performing
	scheduled repaint.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (allocate_regstart)
	[!DEBUG_RELOCATOR_NOMEM_DPRINTF]: Avoid grub_dprintf since not all
	terminals are capabple of malloc-free operation.
	(allocate_inreg) [!DEBUG_RELOCATOR_NOMEM_DPRINTF]: Likewise.
	(malloc_in_range) [!DEBUG_RELOCATOR_NOMEM_DPRINTF]: Likewise.

2011-03-29  Mario Limonciello  <Mario_Limonciello@Dell.com>

        * util/grub-setup.c: Copy the partition table zone if floppy support
	is disabled, even if no partition table is found.

        Otherwise, the BIOS on Dell Latitude E series laptops will freeze
        during POST if an invalid partition table is contained in the PBR
        of the active partition when GRUB is installed to a partition.

2011-03-28  Colin Watson  <cjwatson@debian.org>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Remove stale
	comment.

2011-03-28  Colin Watson  <cjwatson@debian.org>
